Add api documentation to /user
