# api-gateway/docs/swagger.yaml
@@ -85,6 +85,127 @@ definitions:
       status:
         type: string
     type: object
+  web.SwUserLogin:
+    properties:
+      code:
+        type: integer
+      data:
+        $ref: '#/definitions/web.SwUserLoginData'
+      status:
+        type: string
+    type: object
+  web.SwUserLoginData:
+    properties:
+      token:
+        type: string
+    type: object
+  web.SwUserProfile:
+    properties:
+      code:
+        type: integer
+      data:
+        $ref: '#/definitions/web.SwUserProfileData'
+      status:
+        type: string
+    type: object
+  web.SwUserProfileData:
+    properties:
+      address:
+        type: string
+      birth_date:
+        type: string
+      email:
+        type: string
+      gender:
+        type: string
+      name:
+        type: string
+      phone:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  web.SwUserProfileDataUpdate:
+    properties:
+      user_profile:
+        type: string
+    type: object
+  web.SwUserProfileUpdate:
+    properties:
+      code:
+        type: integer
+      data:
+        $ref: '#/definitions/web.SwUserProfileDataUpdate'
+      status:
+        type: string
+    type: object
+  web.SwUserRegister:
+    properties:
+      code:
+        type: integer
+      data:
+        $ref: '#/definitions/web.SwUserRegisterData'
+      status:
+        type: string
+    type: object
+  web.SwUserRegisterData:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  web.UsersLoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  web.UsersRegisterRequest:
+    properties:
+      address:
+        type: string
+      birthdate:
+        type: string
+      email:
+        type: string
+      gender:
+        type: string
+      name:
+        type: string
+      password:
+        minLength: 8
+        type: string
+      phone:
+        type: string
+    required:
+    - address
+    - birthdate
+    - email
+    - gender
+    - name
+    - password
+    - phone
+    type: object
+  web.UsersUpdateProfileRequest:
+    properties:
+      address:
+        type: string
+      birthdate:
+        type: string
+      gender:
+        type: string
+      phone:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -304,4 +425,175 @@ paths:
       summary: Cancel order (Customer Only)
       tags:
       - Order
+  /user/login:
+    post:
+      consumes:
+      - application/json
+      description: Login
+      parameters:
+      - description: User Credentials
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/web.UsersLoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.SwUserLogin'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/web.ErrWebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/web.ErrWebResponse'
+      summary: Login
+      tags:
+      - User
+  /user/profile/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get user profile
+      parameters:
+      - description: JWT Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.SwUserProfile'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/web.ErrWebResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/web.ErrWebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/web.ErrWebResponse'
+      summary: Profile (Owner Only)
+      tags:
+      - User
+    put:
+      consumes:
+      - application/json
+      description: Update user profile
+      parameters:
+      - description: JWT Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: User Data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/web.UsersUpdateProfileRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.SwUserProfileUpdate'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/web.ErrWebResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/web.ErrWebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/web.ErrWebResponse'
+      summary: Update Profile (Owner Only)
+      tags:
+      - User
+  /user/register:
+    post:
+      consumes:
+      - application/json
+      description: Register new user
+      parameters:
+      - description: User Data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/web.UsersRegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/web.SwUserRegister'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/web.ErrWebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/web.ErrWebResponse'
+      summary: Register
+      tags:
+      - User
+  /user/register/admin:
+    post:
+      consumes:
+      - application/json
+      description: Register for admin
+      parameters:
+      - description: Admin Data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/web.UsersRegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/web.SwUserRegister'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/web.ErrWebResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/web.ErrWebResponse'
+      summary: Register Admin
+      tags:
+      - User
 swagger: "2.0"
